# mosquitto-identity-plugin

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  wrapper.h
.example/: .dockerignore  Dockerfile  default.conf  default.example.conf
.github/workflows/: ci.yml
docs/: flow.drawio
src/: lib.rs  main.rs  mosquitto_api.rs
src/identity/: configs.rs  mod.rs  plugin.rs
src/mosquitto/: acl.rs  basic_auth.rs  defs.rs  login.rs  mod.rs  startup.rs
