[package]
name = "identity-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["dylib"]

[dependencies]
libc = { version = "0.2.133"}
log = { version = "0.4.17" }
env_logger = { version = "0.9.1" }
ureq = { version = "2.5.0" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

[build-dependencies]
bindgen = { version = "0.60.1", default-features = false, features = ["runtime"] }